crates/annales/tests/snapshots/contract__on_disk_series_file.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 215
expression: on_disk
---
{"key":"20260718","refs":[],"data":{"values":["78.4"]}}
{"key":"20260719","refs":[],"data":{"values":["79.1"],"note":"after a run"}}
