crates/annales/tests/snapshots/contract__verb_add_created_series.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 91
expression: pretty(&created)
---
{
  "created": {
    "core": "annales",
    "home": "ecv",
    "kind": "log",
    "series": "weight"
  }
}
