crates/annales/tests/snapshots/contract__verb_add_fresh.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 96
expression: pretty(&fresh)
---
{
  "core": "annales",
  "data": {
    "values": [
      "78.4"
    ]
  },
  "home": "ecv",
  "key": "20260718",
  "kind": "log",
  "refs": [],
  "series": "weight"
}
