crates/annales/tests/snapshots/contract__verb_add_overwrite_applied.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 107
expression: pretty(&applied)
---
{
  "core": "annales",
  "data": {
    "values": [
      "78.9"
    ]
  },
  "home": "ecv",
  "key": "20260718",
  "kind": "log",
  "refs": [],
  "series": "weight"
}
