crates/annales/tests/snapshots/contract__verb_add_overwrite_pending.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 102
expression: pretty(&redact(pending))
---
{
  "change": {
    "after": {
      "core": "annales",
      "data": {
        "values": [
          "78.9"
        ]
      },
      "home": "ecv",
      "key": "20260718",
      "kind": "log",
      "refs": [],
      "series": "weight"
    },
    "before": {
      "core": "annales",
      "data": {
        "values": [
          "78.4"
        ]
      },
      "home": "ecv",
      "key": "20260718",
      "kind": "log",
      "refs": [],
      "series": "weight"
    },
    "core": "annales",
    "home": "ecv",
    "key": "20260718",
    "kind": "log",
    "series": "weight",
    "verb": "add"
  },
  "plan": "add",
  "token": "[redacted]"
}
