crates/annales/tests/snapshots/contract__verb_edit.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 123
expression: pretty(&edited)
---
{
  "core": "annales",
  "data": {
    "values": [
      "79.0"
    ]
  },
  "home": "ecv",
  "key": "20260718",
  "kind": "log",
  "refs": [],
  "series": "weight"
}
