crates/annales/tests/snapshots/contract__verb_move.snap
---
source: crates/annales/tests/contract.rs
expression: pretty(&moved)
---
{
  "moved": {
    "from": "ecv",
    "to": "ec"
  },
  "record": {
    "core": "annales",
    "home": "ec",
    "kind": "log",
    "series": "weight"
  }
}
