crates/annales/tests/snapshots/contract__verb_rm.snap
---
source: crates/annales/tests/contract.rs
assertion_line: 137
expression: pretty(&deleted)
---
{
  "deleted": "20260718"
}
